# sudoku-solver-tk

./: .gitignore  pyproject.toml  readme.md  requirements.txt
solver/: __init__.py  brute_forcer.py  solver.py  step_solver.py
solver/strategies/: basic_strategy.py  hidden_single.py  hidden_subset.py  intersection_strategy.py  multi_containers_strategy.py  naked_subset.py  pointing_subset.py  single_chain.py  strategy.py  wing_strategy.py  x_chain.py
solver/strategies/basic/: basic_strategy.py  hidden_subset.py  naked_subset.py
solver/strategies/basic/intersection/: box_line_reduction.py  intersection_strategy.py
solver/strategies/multi_containers/: basic_fish.py  multi_containers_strategy.py  single_chain.py  x_chain.py
solver/strategies/wing/: wing_strategy.py
tests/: brute_forcer_test.py  solver_test.py
ui/: controller.py  grid_frame.py  side_panel_frame.py  values_frame.py
