[project]
name = "sd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "events>=0.5",
]

[dependency-groups]
dev = [
    "events-stubs",
    "mypy>=1.15.0",
    "ruff>=0.11.2",
]

[tool.ruff]
line-length = 119

[tool.mypy]
# Coverage
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_decorators = true
disallow_untyped_calls = true
check_untyped_defs = true
warn_incomplete_stub = true

# Any and Generics
disallow_any_decorated = true
disallow_any_generics = true
disallow_any_explicit = true
disallow_subclassing_any = true
warn_return_any = true

# Something unused
warn_unused_configs = true
warn_unused_ignores = true

# Possible errors
disallow_any_unimported = true
warn_redundant_casts = true
strict_equality = true
strict_concatenate = true
warn_unreachable = true
no_implicit_reexport = true

# Extra
strict = true

[tool.uv.sources]
events-stubs = { git = "https://github.com/promontorium/events-stubs" }
